[package]
name = "read_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "read_rs"
path = "src/main.rs"


[dependencies]
ledger-canister = { git="https://github.com/dfinity/ic" }
dfn_core = { git="https://github.com/dfinity/ic" }
dfn_protobuf = { git="https://github.com/dfinity/ic" }
dfn_candid = { git="https://github.com/dfinity/ic" }
ic-types = { git="https://github.com/dfinity/ic" }
serde = "1.0"
# ic-cdk = { version = "0.2.4", default-features = false }
# ic-cdk-macro = { version = "0.2.4", default-features = false }
candid = "0.6.15"