[package]
name = "read_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "read_rs"
path = "src/main.rs"


[dependencies]
ic-nns-handler-root = { git="https://github.com/flyq/ic" }
ledger-canister = { git="https://github.com/flyq/ic" }
dfn_core = { git="https://github.com/flyq/ic" }
dfn_protobuf = { git="https://github.com/flyq/ic" }
dfn_candid = { git="https://github.com/flyq/ic" }
ic-base-types = { git="https://github.com/flyq/ic" }
ic-registry-transport = { git="https://github.com/flyq/ic" }
ic-cdk-macros = "0.3.1"
ic-cdk = "0.3.1"
serde = "1.0"
candid = "0.6.15"
base32 = "0.4.0"